--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -428,21 +428,25 @@ if(use_core_foundation)
 endif()
 
 if(CURL_USE_OPENSSL)
-  find_package(OpenSSL REQUIRED)
+  
+  set(CMAKE_FOLDER "Dependencies")
+  include(CPM)
+
+  CPMAddPackage(
+          NAME openssl
+          GITHUB_REPOSITORY xgladius/openssl-cmake
+          GIT_TAG 1.0.2
+  )
+
   set(SSL_ENABLED ON)
   set(USE_OPENSSL ON)
 
   # Depend on OpenSSL via imported targets if supported by the running
   # version of CMake.  This allows our dependents to get our dependencies
   # transitively.
-  if(NOT CMAKE_VERSION VERSION_LESS 3.4)
-    list(APPEND CURL_LIBS OpenSSL::SSL OpenSSL::Crypto)
-  else()
-    list(APPEND CURL_LIBS ${OPENSSL_LIBRARIES})
-    include_directories(${OPENSSL_INCLUDE_DIR})
-  endif()
+  list(APPEND CURL_LIBS ssl crypto)
 
-  set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
+  set(CMAKE_REQUIRED_INCLUDES ${openssl_INCLUDE_DIR})
   if(NOT DEFINED HAVE_RAND_EGD)
     check_symbol_exists(RAND_egd "${CURL_INCLUDES}" HAVE_RAND_EGD)
   endif()
